# EmailGuardian_002

./: .replit  README_LOCAL_INSTALL.md  app.py  config.py  domain_classifier.pkl  domain_ml.py  email_guardian.sqlite  ingest.py  install_mac.sh  install_windows.bat  main.py  ml.py  models.py  pyproject.toml  replit.md  requirements.txt  rules.py  setup.py  start_mac.sh  start_windows.bat  utils.py
attached_assets/: README_Email_Guardian_1756125321640.md
static/: style.css
templates/: admin.html  base.html  domain_labels.html  event_detail.html  events.html  exclusion_keywords.html  index.html  keywords.html  policies.html  rules.html  upload.html  whitelist.html
