[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.3.2",
    "email-validator>=2.2.0",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "python-dateutil>=2.9.0.post0",
    "scikit-learn>=1.7.1",
    "tqdm>=4.67.1",
    "werkzeug>=3.1.3",
]
